# SimpleSolver

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  EqQpNs.cpp  EqQpNs.h  Loggers.h  Lp.h  LpPrimal.cpp  LpPrimal.h  Macros.h  Qp.h  QpNs.cpp  QpNs.h  QpStartTypeI.cpp  QpStartTypeI.h  SimpleSolver  StdConstraints.cpp  StdConstraints.h  eq_qp_ns.cpp  eq_qp_ns.h  macros.h  qp_ns.cpp  qp_ns.h
tests/: CMakeLists.txt  EqQpNsTest.cpp  LpPrimalTest.cpp  QpNsTest.cpp  StdConstraintsTest.cpp  eq_qp_ns_test.cpp  qp_ns_test.cpp
